Bug 1095298 - Ignore 'C' locale when initializing nsLocaleService on Android. r=emk, a=lmandel

On Android Lollipop, our setlocale call returns "C", rather than the null it returns on earlier Android versions.

This impacts locale detection, causing devices to always appear to be in en-US.

This patch conditionally ignores "C" if MOZ_WIDGET_ANDROID is set.